Fix header size on mobile

--- a/src/styles/headerStyle.css
+++ b/src/styles/headerStyle.css
@@ -4,14 +4,14 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    margin-top: -50px;
+    margin-top: clamp(-20px, 1vw, -50px);
     margin-bottom: 30px;
 }
 
 header h1{
     font-family: rickAndMorty;
     border-radius: 1rem;
-    font-size: clamp(3rem, 10vw, 5rem);
+    font-size: clamp(2rem, 10vw, 5rem);
     margin: 1em 0 0.5em 0;
     letter-spacing: 0.1rem;
     color: rgb(86, 219, 234);
@@ -19,6 +19,7 @@ header h1{
 }
 
 header p{
-    font-size: clamp(1rem, 3vw, 1.5rem);
+    font-size: clamp(0.9rem, 3vw, 1.5rem);
+    padding: 0px 10px 0px 10px;
     color: var(--color-portal)
 }
